[tool.poetry]
name = "implicit-kan"
version = "0.1.0"
description = ""
authors = ["belkakari <sterkin.gleb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
torch = "^2.3.0"
torchvision = "^0.18.0"
einops = "^0.8.0"
matplotlib = "^3.8.4"
opencv-python = "^4.9.0.80"
pillow = "^10.3.0"
ipython = "^8.24.0"
ipykernel = "^6.29.4"
pre-commit = "^3.7.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
